--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=MultiClassR
 #Configuraciones de la base de datos
-
+server.servlet.context-path=/api/v1
 spring.datasource.url=jdbc:mysql://localhost:3306/MultiClassR
 spring.datasource.username=root
 spring.datasource.password=
